Answer, Qqestion, FakeGenerateTest, MazayTestManeger
Answer, Qqestion Поправил замечания которые были ранее, MazayTestManeger создал интерфейс стартовой страницы, и последующей, FakeGenerateTest создал класс в нем объект interactiveTest

--- a/MazayTests.Launcher/Test Builder/MazayTestsManager.csproj
+++ b/MazayTests.Launcher/Test Builder/MazayTestsManager.csproj
@@ -7,4 +7,8 @@
     <UseWindowsForms>true</UseWindowsForms>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\MazayTests.Core\MazayTests.Core.csproj" />
+  </ItemGroup>
+
 </Project>
