--- a/MazayTests.Launcher/MazayTests.Manager/MazayTests.Manager.csproj
+++ b/MazayTests.Launcher/MazayTests.Manager/MazayTests.Manager.csproj
@@ -13,12 +13,34 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Update="CustomScrollbar.cs" />
     <Compile Update="Forms\ManagerTestsForm.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Update="Forms\StartForm.cs">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Update="Resource.Designer.cs">
+      <DependentUpon>Resource.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Properties\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="CustomScrollbar.resx">
+      <SubType>Designer</SubType>
+      <DependentUpon>CustomScrollbar.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Resource.resx">
+      <SubType>Designer</SubType>
+      <LastGenOutput>Resource.Designer.cs</LastGenOutput>
+      <Generator>ResXFileCodeGenerator</Generator>
+    </EmbeddedResource>
   </ItemGroup>
 
 </Project>
