--- a/MazayTests.Launcher/MazayTests.Core/MazayTests.Core.csproj
+++ b/MazayTests.Launcher/MazayTests.Core/MazayTests.Core.csproj
@@ -4,4 +4,9 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Sitecore.FakeDb" Version="2.0.1" />
+    <PackageReference Include="XAct.Core.PCL" Version="0.0.5014" />
+  </ItemGroup>
+
 </Project>
